--- a/OceanKisBahcesi.WebUI/Views/Home/Index.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Home/Index.cshtml
@@ -1,8 +1,180 @@
-﻿
+﻿@model OceanKisBahcesi.WebUI.Models.HomeViewModel
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_SiteLayout.cshtml";
+    var request = Context.Request.QueryString.ToString();
+    var nameText = "";
+    var phoneText = "";
+    var emailText = "";
+    var messageText = "";
+    var subjectText = "";
+    var buttonText = "";
+    if (request == "?language=en-US")
+    {
+        nameText = "Your Name";
+        emailText = "Email";
+        phoneText = "Phone";
+        messageText = "Message";
+        subjectText = "Subject";
+        buttonText = "Send Message";
+    }
+    if (request == "?language=tr-TR")
+    {
+        nameText = "Ad Soyad";
+        emailText = "Email";
+        phoneText = "Telefon";
+        messageText = "Mesaj";
+        subjectText = "Konu";
+        buttonText = "Mesaj Gönder";
+    }
+    if (request == "")
+    {
+        nameText = "Ad Soyad";
+        emailText = "Email";
+        phoneText = "Telefon";
+        messageText = "Mesaj";
+        subjectText = "Konu";
+        buttonText = "Mesaj Gönder";
+    }
 }
+<style>
+    .tales {
+        width: 100%;
+    }
 
-<h1>Anasayfa</h1>
+    .carousel-inner {
+        width: 100%;
+        max-height: 600px !important;
+    }
+</style>
+<div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
 
+        @foreach (var item in Model.Sliders)
+        {
+            if (item.IsActive == 1)
+            {
+                <div class="carousel-item active">
+                    <img src="~/Images/Sliders/@item.Name" style="width:100%">
+                </div>
+
+            }
+            else
+            {
+                <div class="carousel-item">
+                    <img src="~/Images/Sliders/@item.Name" style="width:100%">
+                </div>
+
+            }
+
+
+        }
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </a>
+</div>
+
+
+
+
+<section class="services">
+    <div class="container">
+
+        <div class="row">
+            @foreach (var item in Model.Services)
+            {
+                <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
+                    <div class="icon-box icon-box-pink">
+                        <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                        <h4 class="title"><a>@item.Title</a></h4>
+                        <p class="description">@item.Description</p>
+                    </div>
+                </div>
+            }
+
+
+
+
+        </div>
+
+    </div>
+</section><!-- End Services Section -->
+
+<section class="contact" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+    <div class="container">
+
+        <div class="row">
+
+            <div class="col-lg-12">
+                <form method="post" role="form">
+                    <div class="row">
+                        <div class="col-md-6 form-group">
+                            <input type="text" name="name" class="form-control" id="name" placeholder="@nameText" required>
+                        </div>
+                        <div class="col-md-6 form-group mt-3 mt-md-0">
+                            <input type="email" class="form-control" name="email" id="email" placeholder="@emailText" required>
+                        </div>
+                    </div>
+                    <br />
+                    <div class="row">
+                        <div class="col-md-6 form-group">
+                            <input type="text" class="form-control" name="phone" id="phone" placeholder="@phoneText" required>
+
+                        </div>
+                        <div class="col-md-6 form-group mt-3 mt-md-0">
+                            <input type="text" class="form-control" name="subject" id="subject" placeholder="@subjectText" required>
+                        </div>
+                    </div>
+
+                    <div class="form-group mt-3">
+                        <textarea class="form-control" name="message" id="message" rows="5" placeholder="@messageText" required></textarea>
+                    </div>
+                    <br />
+                    <div class="text-center"><button type="button" onclick="sendMail()" class="btn btn-success">@buttonText</button></div>
+                </form>
+            </div>
+
+        </div>
+
+    </div>
+</section>
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script>
+    $(document).ready(function () {
+        //$('#phone').inputmask('(999)-999-9999');
+        $("#phone").keyup(function () {
+            if (this.value.match(/[^0-9]/g)) {
+                this.value = this.value.replace(/[^0-9]/g, '');
+            }
+        });
+    });
+
+    function sendMail() {
+
+        $.post("/Contact/SendMail", {
+            "Fullname": $("#name").val(),
+            "Email": $("#email").val(),
+            "Phone": $("#phone").val(),
+            "Subject": $("#subject").val(),
+            "Message": $("#message").val()
+        }, function (res) {
+            if (res.success == false) {
+                alert(res.message);
+            } else {
+                alert("Mesaj başarıyla gönderildi");
+                $("#name").val("");
+                $("#email").val("");
+                $("#phone").val("");
+                $("#subject").val("");
+                $("#message").val("");
+            }
+        })
+
+    }
+
+
+</script>
