--- a/OceanKisBahcesi.WebUI/Views/Shared/Components/Navbar/Default.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Shared/Components/Navbar/Default.cshtml
@@ -42,7 +42,7 @@
 
                 </ul>
             </li>
-            <li><a href="/about?language=tr-TR">İletişim</a></li>
+            <li><a href="/contact?language=tr-TR">İletişim</a></li>
             <li class="dropdown">
                 <a href="#"><span>Dil</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
@@ -92,7 +92,7 @@
                 </ul>
 
             </li>
-            <li><a href="/about?language=en-US">Contact</a></li>
+            <li><a href="/contact?language=en-US">Contact</a></li>
             <li class="dropdown">
                 <a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
@@ -145,7 +145,7 @@
                 </ul>
 
             </li>
-            <li><a href="/about?language=tr-TR">İletişim</a></li>
+            <li><a href="/contact?language=tr-TR">İletişim</a></li>
             <li class="dropdown">
                 <a href="#"><span>Dil</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
