--- a/OceanKisBahcesi.WebUI/Views/Home/Index.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Home/Index.cshtml
@@ -3,12 +3,14 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_SiteLayout.cshtml";
     var request = Context.Request.QueryString.ToString();
+    var icon = "";
     var nameText = "";
     var phoneText = "";
     var emailText = "";
     var messageText = "";
     var subjectText = "";
     var buttonText = "";
+    var title = "";
     if (request == "?language=en-US")
     {
         nameText = "Your Name";
@@ -17,6 +19,7 @@
         messageText = "Message";
         subjectText = "Subject";
         buttonText = "Send Message";
+        title = "Contact Us";
     }
     if (request == "?language=tr-TR")
     {
@@ -26,6 +29,7 @@
         messageText = "Mesaj";
         subjectText = "Konu";
         buttonText = "Mesaj Gönder";
+        title = "Bize Ulaşın";
     }
     if (request == "")
     {
@@ -35,6 +39,7 @@
         messageText = "Mesaj";
         subjectText = "Konu";
         buttonText = "Mesaj Gönder";
+        title = "Bize Ulaşın";
     }
 }
 <style>
@@ -45,6 +50,11 @@
     .carousel-inner {
         width: 100%;
         max-height: 600px !important;
+    }
+
+    video {
+        width: 100%;
+        height: auto;
     }
 </style>
 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
@@ -87,9 +97,10 @@
         <div class="row">
             @foreach (var item in Model.Services)
             {
+
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch" data-aos="fade-up">
-                    <div class="icon-box icon-box-pink">
-                        <div class="icon"><i class="bx bxl-dribbble"></i></div>
+                    <div class="icon-box icon-box-blue">
+                        <div class="icon"><i class="bx bx-@item.Logo"></i></div>
                         <h4 class="title"><a>@item.Title</a></h4>
                         <p class="description">@item.Description</p>
                     </div>
@@ -104,12 +115,76 @@
     </div>
 </section><!-- End Services Section -->
 
-<section class="contact" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            @foreach (var item in Model.HomeVideos)
+            {
+                <video width="400" controls>
+                    <source src="~/Video/@item.VideoName" type="video/mp4">
+                    <source src="mov_bbb.ogg" type="video/ogg">
+                </video>
+            }
+
+        </div>
+        <div class="col-md-6">
+
+        </div>
+    </div>
+</div>
+
+
+<section class="features">
+    <div class="container">
+        @foreach (var item in Model.Features)
+        {
+            if (item.Sort == 1 || item.Sort == 3)
+            {
+                <div class="row" data-aos="fade-up">
+                    <div class="col-md-5">
+                        <img src="~/Images/Features/@item.Image" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-7 pt-4">
+                        @Html.Raw(item.Name)
+                    </div>
+                </div>
+            }
+            else
+            {
+
+                <div class="row" data-aos="fade-up">
+                    <div class="col-md-5 order-1 order-md-2">
+                        <img src="~/Images/Features/@item.Image" class="img-fluid" alt="">
+                    </div>
+                    <div class="col-md-7 pt-5 order-2 order-md-1">
+                        @Html.Raw(item.Name)
+                    </div>
+                </div>
+
+            }
+
+
+
+        }
+
+
+
+
+
+
+
+    </div>
+</section>
+
+<h3 class="text-center" style="margin-top:10px;margin-right:800px;font-style:italic;font-size:32px;color:#007aff;"><b>@ViewBag.slogan</b></h3>
+
+<section style="background-color:aliceblue;" class="contact" data-aos="fade-up" data-aos-easing="ease-in-out" data-aos-duration="500">
     <div class="container">
 
         <div class="row">
 
             <div class="col-lg-12">
+                <h3>@title</h3>
                 <form method="post" role="form">
                     <div class="row">
                         <div class="col-md-6 form-group">
