--- a/OceanKisBahcesi.WebUI/Views/Admin/SubProductList.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Admin/SubProductList.cshtml
@@ -38,10 +38,11 @@
                             <td>@item.Language.Name</td>
                             <td>
                                 <a class="btn btn-success btn-sm">Güncelle</a>
-                                <a class="btn btn-warning btn-sm">Açıklama Ekle</a>
+                                <a class="btn btn-warning btn-sm" href="/Admin/SubProductDescription?id=@item.Id">Açıklama Ekle</a>
                                 <a href="/Admin/SubProductFeature?id=@item.Id" class="btn btn-info btn-sm">Özellik Ekle</a>
                                 @if (item.Language.Name == "tr-TR")
                                 {
+                                    <a href="/Admin/Image2D?path=@item.Path" class="btn btn-light btn-sm">2D Resim Ekle</a>
                                     <a href="/Admin/SubProductImage?path=@item.Path" class="btn btn-secondary btn-sm">Resim Ekle</a>
                                     <a class="btn btn-primary btn-sm">Video Ekle</a>
                                 }
