--- a/OceanKisBahcesi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -51,6 +51,20 @@
                 </a>
             </li>
 
+            <li class="nav-item active">
+                <a class="nav-link" href="/Admin/AboutList">
+                    <i class="fas fa-fw fa-code-branch"></i>
+                    <span>Hakkımızda</span>
+                </a>
+            </li>
+
+            <li class="nav-item active">
+                <a class="nav-link" href="/Admin/ContactList">
+                    <i class="fas fa-fw fa-address-book"></i>
+                    <span>İletişim Bilgileri</span>
+                </a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
 
@@ -77,7 +91,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">@User.Identity.Name</span>
                                 <img class="img-profile rounded-circle"
                                      src="~/adminTema/img/undraw_profile.svg">
                             </a>
@@ -85,7 +99,7 @@
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
                                  aria-labelledby="userDropdown">
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                <a class="dropdown-item" href="/Login/LogOut">
                                     <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
                                     Çıkış Yap
                                 </a>
@@ -139,7 +153,7 @@
     <script src="~/adminTema/vendor/datatables/jquery.dataTables.min.js"></script>
     <script src="~/adminTema/vendor/datatables/dataTables.bootstrap4.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/11.0.20/sweetalert2.min.js" integrity="sha512-KIRtgwO59gNBBB6xsSD53HJ2zXW0PV9aRw4cIR33lTreCLhsjA3RgUwPAWOAYjZ+70olt9+jEdSayO3kNyamVg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.0/jquery.mask.js"></script>
     @RenderSection("Scripts", required: false)
 
 </body>
