--- a/OceanKisBahcesi.WebUI/Views/Admin/SubProductList.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Admin/SubProductList.cshtml
@@ -37,7 +37,7 @@
                             <td>@item.Product.Name</td>
                             <td>@item.Language.Name</td>
                             <td>
-                                <a class="btn btn-success btn-sm">Güncelle</a>
+                                <a class="btn btn-success btn-sm" href="/Admin/SubProductUpdate?id=@item.Id">Güncelle</a>
                                 <a class="btn btn-warning btn-sm" href="/Admin/SubProductDescription?id=@item.Id">Açıklama Ekle</a>
                                 <a href="/Admin/SubProductFeature?id=@item.Id" class="btn btn-info btn-sm">Özellik Ekle</a>
                                 @if (item.Language.Name == "tr-TR")
