--- a/OceanKisBahcesi.WebUI/Views/Shared/_AdminLayout.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Shared/_AdminLayout.cshtml
@@ -44,6 +44,13 @@
             <hr class="sidebar-divider my-0">
 
             <!-- Nav Item - Dashboard -->
+
+            <li class="nav-item active">
+                <a class="nav-link" href="/Admin/ProductList">
+                    <i class="fas fa-fw fa-tachometer-alt"></i>
+                    <span>Ürünler</span>
+                </a>
+            </li>
             <li class="nav-item active">
                 <a class="nav-link" href="/Admin/SubProductList">
                     <i class="fas fa-fw fa-tachometer-alt"></i>
