--- a/OceanKisBahcesi.WebUI/Views/Shared/Components/Navbar/Default.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Shared/Components/Navbar/Default.cshtml
@@ -42,6 +42,7 @@
 
                 </ul>
             </li>
+            <li><a href="/e-katalog?language=tr-TR">E-katalog</a></li>
             <li><a href="/contact?language=tr-TR">İletişim</a></li>
             <li class="dropdown">
                 <a href="#"><span>Dil</span> <i class="bi bi-chevron-down"></i></a>
@@ -92,6 +93,7 @@
                 </ul>
 
             </li>
+            <li><a href="/e-katalog?language=en-US">E-catalogue</a></li>
             <li><a href="/contact?language=en-US">Contact</a></li>
             <li class="dropdown">
                 <a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
@@ -145,6 +147,8 @@
                 </ul>
 
             </li>
+            <li><a href="/e-katalog?language=tr-TR">E-katalog</a></li>
+
             <li><a href="/contact?language=tr-TR">İletişim</a></li>
             <li class="dropdown">
                 <a href="#"><span>Dil</span> <i class="bi bi-chevron-down"></i></a>
