--- a/OceanKisBahcesi.WebUI/Views/Admin/ProductList.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Admin/ProductList.cshtml
@@ -36,13 +36,14 @@
                                     <a href="/Admin/ProductFeature?id=@item.Id" class="btn btn-info btn-sm">Özellik Ekle</a>
                                     @if (item.Language.Name == "tr-TR")
                                     {
+                                        <a href="/Admin/AddProductMainImage?path=@item.Path&id=@item.Id" class="btn btn-outline-info btn-sm">Ana Resim Ekle</a>
                                         <a href="/Admin/ProductImage2D?path=@item.Path&id=@item.Id" class="btn btn-light btn-sm">2D Resim Ekle</a>
                                         <a href="/Admin/ProductImage?path=@item.Path&id=@item.Id" class="btn btn-secondary btn-sm">Resim Ekle</a>
-                                        <a class="btn btn-primary btn-sm">Video Ekle</a>
+                                        <a class="btn btn-primary btn-sm" href="/Admin/AddProductVideo?path=@item.Path&id=@item.Id">Video Ekle</a>
                                     }
                                 }
 
-
+                                <button class="btn btn-danger btn-sm">Sil</button>
                             </td>
                         </tr>
                     }
