--- a/OceanKisBahcesi.WebUI/Views/Admin/SubProductList.cshtml
+++ b/OceanKisBahcesi.WebUI/Views/Admin/SubProductList.cshtml
@@ -4,7 +4,9 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
     var language = "";
 }
-
+<a class="btn btn-info btn-sm" href="/Admin/SubProductAdd">Alt Ürün Ekle</a>
+<br />
+<br />
 <div class="card shadow mb-4">
     <div class="card-header py-3">
         <h6 class="m-0 font-weight-bold text-primary">Alt Ürün Listesi</h6>
@@ -43,10 +45,11 @@
                                 @if (item.Language.Name == "tr-TR")
                                 {
                                     <a href="/Admin/Image2D?path=@item.Path" class="btn btn-light btn-sm">2D Resim Ekle</a>
+                                    <a href="/Admin/AddSubProductMainImage?path=@item.Path&id=@item.Id" class="btn btn-outline-info btn-sm">Ana Resim Ekle</a>
                                     <a href="/Admin/SubProductImage?path=@item.Path" class="btn btn-secondary btn-sm">Resim Ekle</a>
-                                    <a class="btn btn-primary btn-sm">Video Ekle</a>
+                                    <a class="btn btn-primary btn-sm" href="/Admin/AddSubProductVideo?path=@item.Path&id=@item.Id">Video Ekle</a>
                                 }
-
+                                <button class="btn btn-danger btn-sm">Sil</button>
                             </td>
                         </tr>
                     }
@@ -55,7 +58,7 @@
         </div>
     </div>
 </div>
-@section Scripts{ 
+@section Scripts{
 
     <script src="~/Admin/js/SubProductList.js"></script>
 }
